--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,9 +13,9 @@
             android:paddingRight="24dp">
 
                 <ImageView
-                    android:src="@drawable/logo"
+                    android:src="@drawable/logo2"
                     android:layout_width="wrap_content"
-                    android:layout_height="72dp"
+                    android:layout_height="150dp"
                     android:layout_marginBottom="24dp"
                     android:layout_gravity="center_horizontal"/>
                 <!--email label-->
