--- a/app/src/main/res/layout/activity_dificult.xml
+++ b/app/src/main/res/layout/activity_dificult.xml
@@ -45,7 +45,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="Dificl"/>
+            android:text="Dificil"/>
 
     </LinearLayout>
 
