--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -9,7 +9,43 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.uptc.appwordgame.GameActivity">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textSize="40dp"
+        android:text="30"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/text_lvlEasyUser"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30dp"
+            android:textSize="20dp"
+            android:text="USER"/>
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+        <TextView
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="Score:"/>
+        <TextView
+            android:id="@+id/text_lvlEasyScore"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="999"/>
+
+    </LinearLayout>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="100dp"
@@ -63,22 +99,7 @@
             android:textSize="40dp"
             android:background="@drawable/my_button_bg" />
 
-        <!--<TextView-->
-            <!--android:id="@+id/labelLetras2"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="A B "-->
-            <!--android:textAlignment="center"-->
-            <!--android:textSize="60dp" />-->
 
-
-        <!--<TextView-->
-            <!--android:id="@+id/labelLetras3"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="C D "-->
-            <!--android:textAlignment="center"-->
-            <!--android:textSize="60dp" />-->
 
     </LinearLayout>
 
