Add table Scores sort by score

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,5 +45,13 @@
         android:layout_marginBottom="24dp"
         android:padding="12dp"
         android:text="Crear Cuenta"/>
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/btn_ShowScores"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
+        android:padding="12dp"
+        android:text="Puntajes"/>
 
 </LinearLayout>
