--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,13 +15,15 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textSize="40dp"
+        android:textStyle="bold"
+        android:textColor="@color/accent"
         android:text="30"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/text_lvlEasyUser"
@@ -44,6 +46,8 @@
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/accent"
             android:text="999"/>
 
     </LinearLayout>
@@ -57,10 +61,10 @@
     <TextView
         android:id="@+id/labelLetras"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:textAlignment="center"
-        android:textSize="60dp" />
+        android:textSize="50dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
