Bug Fixed Scores

--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -26,8 +26,17 @@
         android:layout_gravity="center_horizontal"/>
     <ListView
         android:id="@+id/scoresListView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+        <Button
+            android:id="@+id/btnTryAgain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Volver a jugar"
+            android:layout_gravity="center_horizontal"/>
+
 
 
 </LinearLayout>
