--- a/app/src/main/res/layout/activity_game_medium.xml
+++ b/app/src/main/res/layout/activity_game_medium.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.uptc.appwordgame.GameActivity">
     <TextView
-        android:id="@+id/text_lvlEasyTimer"
+        android:id="@+id/text_lvlMediumTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -26,7 +26,7 @@
         android:layout_marginBottom="10dp"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/text_lvlEasyUser"
+            android:id="@+id/text_lvlMediumUser"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
@@ -43,12 +43,12 @@
             android:text="Score:"/>
         <TextView
             android:id="@+id/text_lvlMediumScore"
-            android:layout_width="40dp"
+            android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="@color/accent"
-            android:text="999"/>
+            android:text="99999"/>
 
     </LinearLayout>
     <ImageView
